
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; int member_0; } ;
struct sockaddr {int dummy; } ;
typedef int sock_buf_size ;


 int AF_INET ;
 int INADDR_LOOPBACK ;
 int LOCAL_PORT ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SOL_TCP ;
 int SO_SNDBUF ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int htonl (int ) ;
 int htons (int ) ;
 int printf (char*) ;
 int setsockopt (int,int ,int ,char*,int) ;
 int socket (int ,int ,int ) ;
 int usleep (int) ;

__attribute__((used)) static int connect_server_socket(void)
{
 int sockfd;
 struct sockaddr_in addr = {0};
 int ret;
 int sock_buf_size;

 sockfd = socket(AF_INET, SOCK_STREAM, SOL_TCP);
 if (sockfd < 0) {
  printf("socket failed\n");
  usleep(10);
 } else {
  addr.sin_family = AF_INET;
  addr.sin_port = htons(LOCAL_PORT);
  addr.sin_addr.s_addr = htonl(INADDR_LOOPBACK);
 }

 while (connect(sockfd, (struct sockaddr *)&addr, 16) < 0) {
  usleep(10);
 }

 sock_buf_size = 1;
 setsockopt(sockfd, SOL_SOCKET, SO_SNDBUF, (char *)&sock_buf_size, sizeof(sock_buf_size));

 return sockfd;
}
